--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
 <bs-navbar></bs-navbar>
 <div class="container">
-  <div class="starter-template">
-    <h1>Bootstrap template</h1>
-    <p>dkfjkdfkjdkfj</p>
-  </div>
+  <router-oulet></router-oulet>
 </div>
