--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" routerLink="/">O</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,14 +9,8 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
       </li>
-      <ng-template #anonymousUser>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Login</a>
-        </li>
-      </ng-template>
-      <li ngbDropdown *ngIf="auth.user$ | async as user; else anonymousUser" class="nav-item dropdown">
-          {{ user.displayName }}
-        </a>
+      <li ngbDropdown class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href=""></a>
         <div ngbDropdownMenu  class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a> -->
           <!-- Si corro la app hasta este punto el navegador se frizara, la razon de esto es por q , cuando usamos el async pipe, todos las veces q hay un nuevo valor,
@@ -24,13 +18,13 @@
 <!--          <ng-container *ngIf="user.isAdmin">-->
 <!--            -->
 <!--          </ng-container>-->
-          <!-- <a class="dropdown-item" routerLink="/admin/orders">Admin Orders</a>
+          <a class="dropdown-item" routerLink="/admin/orders">Admin Orders</a>
           <a class="dropdown-item" routerLink="/admin/products">Admin Products</a>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
       </li>
     </ul>
   </div>
-</nav> -->
+</nav> 
 
 nav barworks
