--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,3 +1,7 @@
+
+<!-- Si corro la app hasta este punto el navegador se frizara, la razon de esto es por q , cuando usamos el async pipe, todos las veces q hay un nuevo valor,
+  en este observable, angular correra el change detention, el state de la app ha cambiado, entonces caminara abajo de este arbol de objects-->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" routerLink="/">O</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,22 +13,26 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
       </li>
-      <li ngbDropdown class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href=""></a>
-        <div ngbDropdownMenu  class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/my/orders">My Orders</a> -->
-          <!-- Si corro la app hasta este punto el navegador se frizara, la razon de esto es por q , cuando usamos el async pipe, todos las veces q hay un nuevo valor,
-           en este observable, angular correra el change detention, el state de la app ha cambiado, entonces caminara abajo de este arbol de objects-->
-<!--          <ng-container *ngIf="user.isAdmin">-->
-<!--            -->
-<!--          </ng-container>-->
-          <a class="dropdown-item" routerLink="/admin/orders">Admin Orders</a>
-          <a class="dropdown-item" routerLink="/admin/products">Admin Products</a>
+      <ng-template #anonimousUser>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+      </ng-template>
+     
+      <li ngbDropdown *ngIf="authService.user$ | async as user; else anonimousUser" class="nav-item dropdown">
+        <a ngbDropdownToggle cla2ss="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{user.displayName}}
+        </a>
+        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
+          <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+          <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
       </li>
     </ul>
   </div>
-</nav> 
-
-nav barworks
+</nav>
+<!-- The async pipe subscribes to an Observable or Promise and returns the latest value it has emitted.
+   When a new value is emitted, the async pipe marks the component to be checked for changes. When the component gets destroyed, 
+   the async pipe unsubscribes automatically to avoid potential memory leaks. -->
