--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -17,10 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
-      </ng-template>
-     
-      <li ngbDropdown *ngIf="authService.user$ | async as user; else anonimousUser" class="nav-item dropdown">
-        <a ngbDropdownToggle cla2ss="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      </ng-template>     
+      <li ngbDropdown ngbDropdown *ngIf="authService.user$ | async as user; else anonimousUser" class="nav-item dropdown">
+        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           {{user.displayName}}
         </a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
