--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
 <button 
   (click)="login()"
-  class="btn btn-outline-success">Login
+  class="btn btn-outline-success">Login with Google
 </button>
