--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,7 +1,8 @@
-<form action="">
+<form (ngSubmit)="save(f.value)" #f="ngForm">
   <div class="form-group">
     <label for="title">Title</label>
-    <input id="title" type="text" class="form-control">
+    <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+    <div *ngIf="title.touched && title.invalid" class="alert alert-danger">The title is required</div>
   </div>
   
   <div class="form-group">
@@ -10,22 +11,25 @@
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">@</span>
       </div>
-      <input type="text" class="form-control" id="price" aria-label="Username" aria-describedby="basic-addon1">
+      <input #price="ngModel" required ngModel name="price" type="text" class="form-control" id="price">
+      <div *ngIf="price.touched && price.invalid" class="alert alert-danger">The price is required</div>
     </div>
   </div>
 
   <div class="form-group">
     <label for="category">Category</label>
-    <select class="form-control">
+    <select #category="ngModel" required ngModel name="category" class="form-control">
       <option value=""></option>
       <!-- Todos los objetos de firebase tienen una propiedad llamada $key -->
       <option *ngFor="let category of categories$ | async" [value]="category.$key">{{ category.name }}</option>
     </select>
+    <div *ngIf="category.touched && category.invalid" class="alert alert-danger">Category is required</div>
   </div>
 
   <div class="form-group">
     <label for="imageUlr">Image Url</label> 
-    <input id="imageUlr" type="text" class="form-control">
+    <input #title="ngModel" ngModel required name="imageUrl" id="imageUlr" type="text" class="form-control">
+    <div class="alert alert-danger"></div>
   </div>
 
   <button class="btn btn-primary">Save</button>
