--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,36 +1,50 @@
-<form (ngSubmit)="save(f.value)" #f="ngForm">
-  <div class="form-group">
-    <label for="title">Title</label>
-    <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
-    <div *ngIf="title.touched && title.invalid" class="alert alert-danger">The title is required</div>
-  </div>
-  
-  <div class="form-group">
-      <label for="price">Price</label>
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">@</span>
+<div class="row">
+  <div class="col-md-6">
+    <form (ngSubmit)="save(f.value)" #f="ngForm">
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+        <div *ngIf="title.touched && title.invalid" class="alert alert-danger">The title is required</div>
       </div>
-      <input #price="ngModel" required ngModel name="price" type="text" class="form-control" id="price">
-      <div *ngIf="price.touched && price.invalid" class="alert alert-danger">The price is required</div>
-    </div>
+      
+      <div class="form-group">
+          <label for="price">Price</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">@</span>
+          </div>
+          <input #price="ngModel" required ngModel name="price" type="text" class="form-control" id="price">
+          <div *ngIf="price.touched && price.invalid" class="alert alert-danger">The price is required</div>
+        </div>
+      </div>
+    
+      <div class="form-group">
+        <label for="category">Category</label>
+        <select #category="ngModel" required ngModel name="category" class="form-control">
+          <option value=""></option>
+          <!-- Todos los objetos de firebase tienen una propiedad llamada $key -->
+          <option *ngFor="let category of categories$ | async" [value]="category.$key">{{ category.name }}</option>
+        </select>
+        <div *ngIf="category.touched && category.invalid" class="alert alert-danger">Category is required</div>
+      </div>
+    
+      <div class="form-group">
+        <label for="imageUlr">Image Url</label> 
+        <input #imageUrl="ngModel" ngModel required name="imageUrl" id="imageUlr" type="text" class="form-control">
+        <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">The image url is required</div>
+      </div>
+    
+      <button class="btn btn-primary">Save</button>
+    </form>    
+  </div><!--./ col-md-6-->
+  <div class="col-md-6">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" [src]="imageUrl.value">
+      <div class="card-body">
+        <h5 class="card-title">{{ title.value }}</h5>
+        <p class="card-text">{{ price.value | currency:'USD':true }}</p>
+      </div>
+    </div>    
   </div>
+</div>
 
-  <div class="form-group">
-    <label for="category">Category</label>
-    <select #category="ngModel" required ngModel name="category" class="form-control">
-      <option value=""></option>
-      <!-- Todos los objetos de firebase tienen una propiedad llamada $key -->
-      <option *ngFor="let category of categories$ | async" [value]="category.$key">{{ category.name }}</option>
-    </select>
-    <div *ngIf="category.touched && category.invalid" class="alert alert-danger">Category is required</div>
-  </div>
-
-  <div class="form-group">
-    <label for="imageUlr">Image Url</label> 
-    <input #title="ngModel" ngModel required name="imageUrl" id="imageUlr" type="text" class="form-control">
-    <div class="alert alert-danger"></div>
-  </div>
-
-  <button class="btn btn-primary">Save</button>
-</form>
