--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,19 +1,22 @@
 <div class="row">
   <div class="col-md-6">
     <form (ngSubmit)="save(f.value)" #f="ngForm">
+
+      <!-- title field -->
       <div class="form-group">
         <label for="title">Title</label>
-        <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+        <input #title="ngModel" [(ngModel)]="product.title" name="title" id="title" type="text" class="form-control" required>
         <div *ngIf="title.touched && title.invalid" class="alert alert-danger">The title is required</div>
       </div>
       
+      <!-- price field -->
       <div class="form-group">
           <label for="price">Price</label>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1">@</span>
           </div>
-          <input #price="ngModel" required ngModel name="price" type="text" class="form-control" id="price" [min]="0">          
+          <input #price="ngModel" [(ngModel)]="product.price" name="price" type="text" class="form-control" id="price" [min]="0" required>          
         </div>
         <div *ngIf="price.touched && price.invalid" class="alert alert-danger">
           <div *ngIf="price.errors.required">The price is required</div>
@@ -21,9 +24,10 @@
         </div>
       </div>
     
+      <!-- Category field -->
       <div class="form-group">
         <label for="category">Category</label>
-        <select #category="ngModel" required ngModel name="category" class="form-control">
+        <select #category="ngModel" [(ngModel)]="product.category" name="category" class="form-control" required>
           <option value=""></option>
           <!-- Todos los objetos de firebase tienen una propiedad llamada $key -->
           <option *ngFor="let c of categories$ | async" [value]="c.name">{{ c.name }}</option>
@@ -31,9 +35,10 @@
         <div *ngIf="category.touched && category.invalid" class="alert alert-danger">Category is required</div>
       </div>
     
+      <!-- Image url field -->
       <div class="form-group">
-        <label for="imageUlr">Image Url</label> 
-        <input #imageUrl="ngModel" ngModel required name="imageUrl" id="imageUlr" type="text" class="form-control" url>
+        <label for="imageUrl">Image Url</label> 
+        <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" required name="imageUrl" id="imageUrl" type="text" class="form-control" url>
         <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
           <div *ngIf="price.errors.required">The image url is required</div>          
           <div *ngIf="price.errors.url">Please enter valid url.</div>          
@@ -45,10 +50,10 @@
   </div><!--./ col-md-6-->
   <div class="col-md-6">
     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" [src]="imageUrl.value">
+      <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
       <div class="card-body">
-        <h5 class="card-title">{{ title.value }}</h5>
-        <p class="card-text">{{ price.value | currency:'USD':true }}</p>
+        <h5 class="card-title">{{ product.title }}</h5>
+        <p class="card-text">{{ product.price | currency:'USD':true }}</p>
       </div>
     </div>    
   </div>
