--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -45,7 +45,9 @@
         </div>
       </div>
     
-      <button class="btn btn-primary">Save</button>
+      <button class="btn btn-outline-primary">Save</button>
+      <button class="btn btn-outline-danger m-2">Delete</button>
+      <a [routerLink]="['/admin/products']" class="btn btn-outline-success">Back to the list</a>
     </form>    
   </div><!--./ col-md-6-->
   <div class="col-md-6">
