--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,6 +1,9 @@
 <p>
   <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
 </p>
+<p>
+  <input #query (keyup)="filter(query.value)"type="text" class="form-control" placeholder="Search...">
+</p>
 <table class="table">
   <thead>
     <tr>
@@ -12,9 +15,9 @@
   </thead>
   
   <tbody>
-    <tr *ngFor="let p of products$ | async">
-      <td>{{ p.payload.val().title }}</td>
-      <td>{{ p.payload.val().price }}</td>
+    <tr *ngFor="let p of filteredProducts">
+      <td>{{ p.title }}</td>
+      <td>{{ p.price }}</td>
       <td>
         <a [routerLink]="['/admin/products/', p.key]">Edit</a>
       </td>
