--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -4,6 +4,20 @@
 <p>
   <input #query (keyup)="filter(query.value)"type="text" class="form-control" placeholder="Search...">
 </p>
+
+<!-- <data-table
+  [items]="items"
+  [itemCount]="itemCount"
+  (reload)="realoadItems($events)"
+>
+  <data-table-column
+    [property]="'title'"
+    [header]="Title"
+    [sortable]="true"
+    [resizable]="true"
+  ></data-table-column>
+  
+</data-table> -->
 <table class="table">
   <thead>
     <tr>
