--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,15 +1,24 @@
 <div class="row">
-  <ng-container *ngFor="let product of products$ | async; let i= index">
-    <div class="col">
-      <div class="card" style="width: 15rem;">
-        <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
-        <div class="card-body">
-          <h5 class="card-title">{{ product.title }}</h5>
-          <p class="card-text">{{ product.price | currency:'USD':true }}</p>
-          <a href="" class="btn btn-primary">Add product</a>
+  <div class="col-3">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let category of categories$ | async">{{ category.name }}</li>
+    </ul>
+  </div>
+  <div class="col">
+    <div class="row">
+      <ng-container *ngFor="let product of products$ | async; let i= index">
+        <div class="col">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
+            <div class="card-body">
+              <h5 class="card-title">{{ product.title }}</h5>
+              <p class="card-text">{{ product.price | currency:'USD':true }}</p>
+              <a href="" class="btn btn-primary">Add product</a>
+            </div>
+          </div>  
         </div>
-      </div>  
+        <div *ngIf="(i+1) % 2 ===0" class="w-100"></div>    
+      </ng-container>  
     </div>
-    <div *ngIf="(i+1) % 2 ===0" class="w-100"></div>    
-  </ng-container>  
+  </div>
 </div>
