--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -4,46 +4,7 @@
 <p>
   <input #query (keyup)="filter(query.value)"type="text" class="form-control" placeholder="Search...">
 </p>
-
-<!--
-  [items] -- represents the products or the rows in the current page
-  [itemCount] -- total number of items
-  so whenever one of parameters in this table changes for example the page size the current page or to sort order
-  this event is rased
-  (reload)
--->
-<data-table
-  [items]="items"
-  [itemCount]="itemCount"
-  (reload)="realoadItems($events)"
->
-  <!--add columns we want to display here for each -->
-  <data-table-column
-    [property]="'title'"
-    [header]="Title"
-    [sortable]="true"
-    [resizable]="true"
-  ></data-table-column>
-
-  <data-table-column
-    [property]="'price'"
-    [header]="Price"
-    [sortable]="true"
-    [resizable]="true"
-  >
-    <ng-template #dataTableCell let-item="product">{{ product.price | currency:'USD':true }}</ng-template>
-  </data-table-column>
-
-  <data-table-column
-    [property]="'key'"
-  >
-    <ng-template #dataTableCell let-item="product">
-      <a [routerLink]="['/admin/products/', p.key]">Edit</a>
-    </ng-template>
-  </data-table-column>
-  
-</data-table>
-<!-- <table class="table">
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
@@ -62,4 +23,4 @@
       </td>
   </tr>
   </tbody>
-</table> -->
+</table>
