--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,12 +1,19 @@
 <div class="row">
   <div class="col-3">
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let category of categories$ | async">{{ category.name }}</li>
-    </ul>
+    <div class="list-group">
+      <a 
+        *ngFor="let c of categories"
+        routerLink="/"
+        [queryParams]="{category: c.key}"
+        class="list-group-item list-group-item-action"
+        [class.activate]="category===c.key">
+        {{ c.name }}
+      </a>
+    </div>
   </div>
   <div class="col">
     <div class="row">
-      <ng-container *ngFor="let product of products$ | async; let i= index">
+      <ng-container *ngFor="let product of products; let i= index">
         <div class="col">
           <div class="card" style="width: 15rem;">
             <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
