--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -30,7 +30,7 @@
         <select #category="ngModel" [(ngModel)]="product.category" name="category" class="form-control" required>
           <option value=""></option>
           <!-- Todos los objetos de firebase tienen una propiedad llamada $key -->
-          <option *ngFor="let c of categories$ | async" [value]="c.key">{{ c.name }}</option>
+          <option *ngFor="let c of categories$ | async" [value]="c.key">{{ c.payload.val().name }}</option>
         </select>
         <div *ngIf="category.touched && category.invalid" class="alert alert-danger">Category is required</div>
       </div>
